# mdflib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE-3RD-PARTY.md  README.md  cl-fmt.sh  index.md  mdflib.sln  mdflib.vcxproj  mdflib.vcxproj.filters  vcpkg.json
.github/workflows/: build.yml  cmake_linux.yml  cmake_macos.yml  cmake_windows.yml  msbuild.yml
cmake/: MdfLibConfig.cmake
docs/: _config.yml  index.md  mdffile.md  mdfreader.md  mdfreaderexample.cpp  mdfwriter.md
docs/_includes/: head-custom.html
doxygen/: mainpage.dox
fuzzytest/: fuzzytest.cpp
include/mdf/: atcomment.h  canbusobserver.h  canconfigadapter.h  canmessage.h  cccomment.h  cgcomment.h  chcomment.h  cncomment.h  cryptoutil.h  dgcomment.h  etag.h  ethconfigadapter.h  ethmessage.h  evcomment.h  fhcomment.h  hdcomment.h  hocompumethod.h  hocompuscale.h  hointerval.h  honamedetails.h  horevision.h  hoscaleconstraint.h  hounit.h  iattachment.h  iblock.h  ichannel.h  ichannelarray.h  ichannelconversion.h  ichannelgroup.h  ichannelhierarchy.h  ichannelobserver.h  iconfigadapter.h  idatagroup.h  idatawriter.h  ievent.h  ifilehistory.h  iheader.h  imdftimestamp.h  imetadata.h  isampleobserver.h  (+25 more)
include/mdflibrary/: CanMessage.h  MdfAttachment.h  MdfChannel.h  MdfChannelConversion.h  MdfChannelGroup.h  MdfChannelObserver.h  MdfDataGroup.h  MdfETag.h  MdfEvent.h  MdfExport.h  MdfFile.h  MdfFileHistory.h  MdfHeader.h  MdfMetaData.h  MdfReader.h  MdfSourceInformation.h  MdfWriter.h
mdf2csv/: CMakeLists.txt
mdf2csv/src/: createfilelist.cpp  programargument.cpp
mdf2csv/test/: CMakeLists.txt  testcreatefiles.cpp
mdflib/: CMakeLists.txt  mdflib.vcxproj  mdflib.vcxproj.filters
mdflib/src/: at4block.cpp  at4block.h  atcomment.cpp  bigbuffer.h  busconfigadapter.cpp  busconfigadapter.h  ca4block.cpp  ca4block.h  canbusobserver.cpp  canconfigadapter.cpp  canmessage.cpp  cc3block.cpp  cc3block.h  cc4block.cpp  cc4block.h  cccomment.cpp  ccunit.cpp  cd3block.h  ce3block.cpp  ce3block.h  cg3block.cpp  cg3block.h  cg4block.cpp  cg4block.h  cg4datawriter.cpp  cg4datawriter.h  cgcomment.cpp  (+156 more)
mdflib_example/: CMakeLists.txt  README.md
mdflib_example/src/: datawriter_example.cpp
mdflib_test/: CMakeLists.txt
mdflib_test/TestMDFCMake/: CMakeLists.txt
mdflib_test/src/: testbuslogger.cpp  testbuslogger.h  testchannel.cpp  testchannelarray.cpp  testchannelarray.h  testdatawriter.cpp  testdefaultx.cpp  testethlogger.cpp  testflexraylogger.cpp  testhdcomment.cpp  testiostream.cpp  testmdfblock.cpp  testmdfhelper.cpp  testmdftask.cpp  testmdftask.h  testmetadata.cpp  testmostlogger.cpp  testmostlogger.h  testmultipledgwrite.cpp  testqueue.cpp  testread.cpp  testread.h  testreadvlsd.cpp  testwrite.cpp  testwrite.h  testwrite3.cpp  testxtensor.cpp  testzlib.cpp
mdflib_test/src/util/: StringUtil.cpp  TimeUtil.cpp  TimeUtil.h  logconsole.cpp  logfile.cpp  logging.cpp  logging.h  stringutil.cpp  stringutil.h
mdflib_test/util/: TimeUtil.h  logconfig.h
mdflibrary/: CMakeLists.txt  MdfAttachment.cpp  MdfAttachment.h  MdfChannel.cpp  MdfChannel.h  MdfChannelArray.cpp  MdfChannelArray.h  MdfChannelConversion.cpp  MdfChannelConversion.h  MdfChannelGroup.cpp  MdfChannelGroup.h  MdfChannelObserver.cpp  MdfChannelObserver.h  MdfDataGroup.cpp  MdfDataGroup.h  MdfETag.cpp  MdfEvent.cpp  MdfEvent.h  MdfFile.cpp  MdfFile.h  MdfFileHistory.cpp  MdfFileHistory.h  MdfHeader.cpp  MdfHeader.h  MdfMetaData.cpp  MdfMetaData.h  MdfReader.cpp  MdfReader.h  MdfSourceInformation.cpp  MdfSourceInformation.h  MdfWriter.cpp  MdfWriter.h  mdflibrary.cpp  mdflibrary.h  mdflibrary.vcxproj  mdflibrary.vcxproj.filters
mdflibrary/src/: AssemblyInfo.cpp  CanMessage.cpp  CanMessage.h  MdfAttachment.cpp  MdfAttachment.h  MdfChannel.cpp  MdfChannelConversion.cpp  MdfChannelConversion.h  MdfChannelGroup.cpp  MdfChannelGroup.h  MdfChannelObserver.cpp  MdfChannelObserver.h  MdfDataGroup.cpp  MdfDataGroup.h  MdfExport.cpp  MdfExport.h  MdfFile.cpp  MdfFileHistory.cpp  MdfFileHistory.h  MdfFileTimestamp.cpp  MdfFileTimestamp.h  MdfHeader.cpp  MdfHeader.h  MdfMetaData.cpp  MdfNetHelper.cpp  MdfNetHelper.h  MdfReader.cpp  MdfSourceInformation.cpp  MdfTimestamp.cpp  MdfTimestamp.h  MdfWriter.cpp  MdfWriter.h  mdflibrary.cpp  mdflibrary.h
mdflibrary_example/: CMakeLists.txt
mdflibrary_example/src/: test.cpp
mdflibrary_test/: CMakeLists.txt  MdfLibraryTest.cs  mdflibrary_test.csproj  test.cpp
mdflibrary_test/Properties/: launchSettings.json
mdflibrary_test_net/: MdfHelper.cs  MdfLibraryTest.cs  mdflibrary_test.csproj  mdflibrary_test.sln
mdfviewer/: CMakeLists.txt
mdfviewer/src/: channelobserverframe.cpp  channelobserverframe.h  channelobserverlistview.cpp  channelobserverlistview.h  childframe.cpp  childframe.h  mainframe.cpp  mdfdocument.cpp  mdfdocument.h  mdfview.cpp  mdfviewer.cpp  mdfviewer.h  samplereductionframe.cpp  samplereductionlistview.cpp  windowid.h
mdfviewer/src/img/: app.xpm  tree_list.xpm
mdfviewer/src/util/: csvwriter.cpp  logging.cpp  logging.h  logstream.h
script/: boost.cmake  doxygen.cmake  expat.cmake  fetch_expat.cmake  googletest.cmake  iconv.cmake  mdflib.nsi  openssl.cmake  report_server.nsi  sqlite3.cmake  utillib.cmake  wxwidgets.cmake  xtensor.cmake  zlib.cmake
specification/: fs_converter.docx
src/: at4block.cpp  at4block.h  bigbuffer.cpp  bigbuffer.h  blockproperty.cpp  blockproperty.h  ca4block.cpp  ca4block.h  cc3block.cpp  cc3block.h  cc4block.cpp  cc4block.h  cd3block.cpp  cd3block.h  ce3block.cpp  ce3block.h  cg3block.cpp  cg3block.h  cg4block.cpp  cg4block.h  ch4block.cpp  ch4block.h  channelobserver.cpp  channelobserver.h  cn3block.cpp  cn3block.h  cn4block.cpp  cn4block.h  cryptoutil.cpp  datablock.cpp  datablock.h  datalistblock.cpp  datalistblock.h  dg3block.cpp  dg3block.h  dg4block.cpp  dg4block.h  di4block.cpp  di4block.h  dl4block.cpp  (+97 more)
test/: CMakeLists.txt  test_conversion.cpp  testcrypto.cpp  testmdffile.cpp  testmetadata.cpp  testread.cpp  testread.h  testwrite.cpp  testwrite.h  testzlib.cpp  testzlib.h
test/TestMDFCMake/: CMakeLists.txt  main.cpp
(+464 files in other folders)
